--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "reload": "npm run build && npm run start"
+    "reload": "npm run build && npm run start",
+    "import": "ts-node scripts/importRecords.ts"
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
@@ -15,7 +16,8 @@
     "express": "^4.18.2",
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -23,6 +25,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.0.0",
+    "@types/xlsx": "^0.0.35",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
