--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,6 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
-    "typescript": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14"
+    "@types/jest": "^29.5.14",
+    "typescript": "^4.9.5"
   }
 }
